--- a/1- escreva-tela/style.css
+++ b/1- escreva-tela/style.css
@@ -1,74 +1,117 @@
-*{
-   padding: 0;
-   margin: 0;
-   box-sizing: border-box;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
-   display: flex;
-   align-items: center;
-   justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 
-   background-color: gray;
-   min-height: 100vh;
+  background-color: #343a40;
+  min-height: 100vh;
+  font-family: "Roboto", sans-serif;
+}
+
+h1 {
+  font-size: 3rem;
+  color: white;
+  font-family: "Open Sans", sans-serif;
 }
 
 main {
-   min-width: 300px;
-   min-height: 300px;
+  max-width: 400px;
+  min-height: 400px;
 
-   background-color: azure;
-   border: 2px solid black;
+  margin-top: 25px;
+  border-radius: 8px;
 
+  background-color: #495057;
+  border: 2px solid black;
 }
 
 .content {
-   padding-bottom: 30px;
+  padding-bottom: 30px;
 }
 
 .input-write {
-   padding: 30px;
-   border-bottom: 1px solid black;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  padding: 30px;
+  border-bottom: 1px solid black;
 }
 
 .input-write input {
-   font-size: 18px;
-   padding: 0 10px;
+  font-size: 18px;
+  padding: 0 10px;
 
-   width: 100%;
-   height: 40px;
+  width: 100%;
+  height: 40px;
+  background-color: #e7ecef;
 
-   outline: none;
-   border: 1px solid black;
-   border-radius: 8px;
+  border-radius: 8px;
+  border: 1px solid black;
+  outline: none;
+}
+
+.input-write button {
+  margin-top: 8px;
+  padding: 10px 0;
+
+  width: 100%;
+  background-color: #adb5bd;
+  border-radius: 8px;
+
+  border: 1px solid black;
+  outline: none;
+  cursor: pointer;
+  opacity: 1;
+
+  transition: opacity 0.2s ease-in;
+}
+
+.input-write button:hover {
+  opacity: 0.8;
 }
 
 .write-show {
-   margin-top: 20px;
-   /* background-color: white;
+  margin-top: 20px;
+  /* background-color: white;
    width: 100%;
    height: 100%; */
 }
 
 ul {
-   padding: 0 10px;
+  padding: 0 10px;
 }
 
 li {
-   font-size: 1.3rem;
-	user-select: none;
+  font-size: 1.3rem;
+  user-select: none;
 
-   padding: 6px 10px;
-   border-radius: 12px;
+  padding: 6px 10px;
+  border-radius: 14px;
 
-   background-color: gray;
-   list-style: none;
+  background-color: #e7ecef;
+  list-style: none;
 }
 
 li.completed {
-   border-left: 8px solid rgb(70, 202, 202);
+  border-left: 12px solid #6b9080;
+}
+li + li {
+  margin-top: 10px;
 }
 
-li + li {
-   margin-top: 10px;
+.info {
+  margin-top: 8px;
+}
+.info p {
+  text-align: center;
+  color: white;
+  line-height: 1.5;
 }
