--- a/2- tabuada/style.css
+++ b/2- tabuada/style.css
@@ -1,5 +1,73 @@
-*{
-   padding: 0;
-   margin: 0;
-   box-sizing: border-box;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-size: 1rem;
+  font-family: "Roboto", sans-serif;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  background-color: #222831;
+
+  min-height: 100vh;
+}
+
+h1 {
+  font-size: 2.6rem;
+  text-align: center;
+}
+
+main {
+  min-width: 422px;
+  min-height: 200px;
+  padding: 30px;
+
+  border-radius: 8px;
+  border: 2px solid black;
+  background-color: #393e46;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+p {
+  font-size: 1.1rem;
+  text-align: center;
+}
+
+.inputs {
+  display: flex;
+  margin-top: 16px;
+}
+
+.inputs input {
+  font-size: 1.3rem;
+  width: 100%;
+  height: 35px;
+
+  border-radius: 4px;
+  border: 1px solid black;
+  outline: none;
+}
+
+.content button {
+  font-size: 0.8rem;
+  background-color: #00adb5;
+
+  height: 35px;
+  margin-left: 4px;
+  border-radius: 4px;
+
+  border: none;
+  outline: none;
+  cursor: pointer;
 }
