--- a/3- deciamal-para-binario/style.css
+++ b/3- deciamal-para-binario/style.css
@@ -1,5 +1,101 @@
-*{
-   padding: 0;
-   margin: 0;
-   box-sizing: border-box;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  background-color: #071e3d;
+
+  min-height: 100vh;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  width: 430px;
+  min-width: 300px;
+  padding: 30px 10px;
+  min-height: 232px;
+
+  background-color: #1f4287;
+  color: white;
+  border-radius: 6px;
+
+  border: 2px solid black;
+}
+
+.converter {
+  display: flex;
+  margin-top: 10px;
+  /* border: 1px solid red; */
+}
+
+.converter input {
+  font-size: 0.9rem;
+  padding-left: 10px;
+  padding-right: 4px;
+
+  width: 150px;
+  height: 30px;
+
+  border-radius: 4px;
+  border: none;
+  outline: none;
+}
+
+.converter button {
+  width: 75px;
+
+  margin-left: 2px;
+  padding: 7.5px 0;
+
+  background-color: #77abb7;
+  border-radius: 4px;
+
+  outline: none;
+  border: none;
+  cursor: pointer;
+
+  transition: opacity 0.2s ease-in;
+}
+
+.converter button:hover {
+  opacity: 0.8;
+}
+
+.result {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  margin-top: 30px;
+  padding: 18px;
+
+  width: 130px;
+  height: 60px;
+
+  color: black;
+  background-color: white;
+
+  border-radius: 14px;
+}
+
+.result h2 {
+  font-size: 1.1rem;
+}
+
+.result span {
+  margin-top: 5px;
 }
