--- a/3- deciamal-para-binario/style.css
+++ b/3- deciamal-para-binario/style.css
@@ -19,14 +19,16 @@ body {
 }
 
 main {
+  text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
 
+  margin: 0 30px;
+
   width: 430px;
   min-width: 300px;
   padding: 30px 10px;
-  min-height: 232px;
 
   background-color: #1f4287;
   color: white;
@@ -98,4 +100,13 @@ main {
 
 .result span {
   margin-top: 5px;
+}
+
+@media (max-width: 490px) {
+  main {
+    max-width: 430px;
+    width: 300px;
+    min-width: 300px;
+    padding: 30px 21px;
+  }
 }
