--- a/4- border-radius/style.css
+++ b/4- border-radius/style.css
@@ -47,8 +47,15 @@ body {
    height: 30px;
    padding-left: 10px;
    padding-right: 2px;
+   border-radius: 6px;
 
+   border: 1px solid black;
    outline: none;
+}
+
+.input-color[type= color] {
+   background-color: white;
+   padding: 0;
 }
 
 .inputs + .inputs {
@@ -101,9 +108,6 @@ body {
    border: none;
    overflow: hidden;
    outline: none;
-}
-.view-radius::selection {
-   display: none;
 }
 
 @media (max-width: 960px) {
