--- a/5- google-search/style.css
+++ b/5- google-search/style.css
@@ -1,5 +1,85 @@
-*{
-   padding: 0;
-   margin: 0;
-   box-sizing: border-box;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "Roboto", sans-serif;
+
+  height: 100vh;
+}
+
+a {
+  text-decoration: underline;
+  color: black;
+}
+
+h1 {
+  font-size: 3rem;
+  margin-bottom: 30px;
+}
+
+.search {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.inputs {
+  display: flex;
+  justify-content: center;
+  width: 300px;
+}
+
+input[type="text"] {
+  font-size: 1rem;
+  padding: 0 10px;
+
+  width: 100%;
+  height: 30px;
+
+  border: 1px solid black;
+  border-radius: 8px;
+  outline: none;
+}
+
+.search ::-webkit-search-cancel-button {
+  -webkit-appearance: none;
+}
+
+.btn-pt {
+  background-color: gainsboro;
+}
+
+.btn-en {
+  background-color: darkgray;
+}
+
+a {
+   font-size: 0.8rem;
+   text-align: center;
+  color: black;
+  font-weight: bold;
+
+  width: 120px;
+  padding: 10px 0;
+
+  border-radius: 12px;
+
+  border: 1px solid black;
+  outline: none;
+  cursor: pointer;
+}
+
+a + a {
+  margin-left: 12px;
+}
+
+.inputs + .inputs {
+  margin-top: 20px;
 }
