--- a/6- dado-da-sorte/style.css
+++ b/6- dado-da-sorte/style.css
@@ -9,6 +9,8 @@ body {
    align-items: center;
    justify-content: center;
 
+   background-color: #495057;
+
    font-family: "Roboto", sans-serif;
    height: 100vh;
 }
@@ -39,7 +41,7 @@ body {
    align-items: center;
    justify-content: center;
 
-   background-color: whitesmoke;
+   background-color: #ced4da;
    width: 300px;
    height: 300px;
 
@@ -102,7 +104,7 @@ body {
 .gerar-dado {
    font-size: 0.9rem;
    
-   background-color: aquamarine;
+   background-color: #adb5bd;
    margin-top: 18px;
 
    width: 120px;
@@ -111,4 +113,10 @@ body {
    border-radius: 8px;
    border: 1px solid black;
    cursor: pointer;
+
+   transition: opacity .2s ease;
+}
+
+.gerar-dado:hover {
+   opacity: 0.8;
 }
