--- a/8- carrinho-de-compra/style.css
+++ b/8- carrinho-de-compra/style.css
@@ -1,5 +1,131 @@
-*{
-   padding: 0;
-   margin: 0;
-   box-sizing: border-box;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+
+  font-family: "Roboto", sans-serif;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  margin: auto;
+}
+
+h2 {
+  font-size: 2rem;
+  margin-bottom: 20px;
+}
+
+header {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+
+  background-color: #fffffe;
+}
+
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  height: 48px;
+  margin: 0 auto;
+}
+
+li {
+  color: #7f5af0;
+
+  font-size: 1.5rem;
+  list-style: none;
+  cursor: pointer;
+}
+
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  background-color: #16161a;
+
+  height: 100vh;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: center; */
+
+  margin: 20px;
+  padding: 45px 28px;
+
+  background-color: #fffffe;
+  width: 400px;
+  height: 510px;
+  border-radius: 16px;
+}
+
+.buys {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  /* padding: 30px 30px 0; */
+}
+
+.imgs {
+  display: flex;
+
+  max-width: 300px;
+  height: 100%;
+  margin: 0 20px;
+
+  border-radius: 8px;
+  border: 3px solid #010101;
+}
+
+.buys__info {
+  margin-top: 22px;
+  text-align: center;
+}
+
+.buys__info span {
+  font-weight: bold;
+}
+
+.buys__info p {
+  font-size: 0.9rem;
+  margin-top: 7px;
+  line-height: 1.4;
+}
+
+.buys__btns {
+  margin-top: 20px;
+  padding: 10px 20px;
+
+  background-color: #7f5af0;
+  border: 2px solid black;
+  border-radius: 12px;
+}
+
+.buys__btns button {
+  font-size: 1.3rem;
+
+  background-color: transparent;
+
+  outline: none;
+  border: none;
+  cursor: pointer;
+}
+
+.buys__btns--prev {
+  margin-right: 10px;
+}
+
+.buys__btns--next {
+  margin-right: 50px;
 }
