--- a/8- api-pokedex/style.css
+++ b/8- api-pokedex/style.css
@@ -12,6 +12,7 @@ main {
   justify-content: center;
 
   gap: 10px;
+  margin: 10px 0;
 }
 
 .card {
@@ -19,8 +20,9 @@ main {
   flex-direction: column;
   align-items: center;
 
-  height: 130px;
-  width: 120px;
+  height: 214px;
+  width: 150px;
+  padding: 10px;
 
   border-radius: 8px;
   border: 3px solid red;
@@ -31,7 +33,12 @@ main {
 }
 
 .card__img {
-  width: 100%;
+  max-width: 100%;
+}
+
+.card__img img {
+  width: 80px;
+  text-align: center;
 }
 
 .card__id {
