--- a/8- api-pokedex/style.css
+++ b/8- api-pokedex/style.css
@@ -12,7 +12,7 @@ main {
   justify-content: center;
 
   gap: 10px;
-  margin: 10px 0;
+  margin: 10px 0px;
 }
 
 .card {
@@ -25,7 +25,7 @@ main {
   padding: 10px;
 
   border-radius: 8px;
-  border: 3px solid red;
+  border: 2px solid gray;
 }
 
 .card div + div {
