--- a/9- app-music/style.css
+++ b/9- app-music/style.css
@@ -6,16 +6,71 @@
 
 body {
   font-size: 16px;
+  color: #fffffe;
   font-family: "Roboto", sans-serif;
 
+  background-color: #21d4fd;
+  background-image: linear-gradient(180deg, #21d4fd 0%, #b721ff 100%);
+
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 
-  height: 100vh;
+  min-height: 100vh;
 }
 
 main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+h1 {
+  font-size: 2.5rem;
+  margin-bottom: 19px;
+}
+
+form {
+  margin-bottom: 19px;
+}
+
+input {
+  font-size: 1.1rem;
+  background-color: #d1d1e9;
+
+  width: 200px;
+  height: 25px;
+  border-radius: 8px;
+
+  padding: 6px 12px;
+
+  border: none;
+  outline: none;
+}
+
+button {
+  background-color: #d1d1e9;
+  padding: 7px 10px;
+
+  border-radius: 8px;
+  border: none;
+  cursor: pointer;
+
+  transition: all 0.1s ease-in;
+}
+
+button:hover {
+  opacity: 0.8;
+}
+
+.container.remove {
+  visibility: hidden;
+  opacity: 0;
+}
+
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -27,7 +82,15 @@ main {
   padding: 20px;
 
   border-radius: 16px;
-  background-color: #3537b7;
+  background-color: #4a31c4;
+
+  visibility: visible;
+  opacity: 1;
+}
+
+.day {
+  font-size: 1.3rem;
+  font-weight: bol;
 }
 
 .weather {
@@ -39,27 +102,42 @@ main {
   width: 100%;
 }
 
+.weather__img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.weather__img img {
+  min-width: 100px;
+}
+
+.weather__img span {
+  font-size: 1.2rem;
+}
+
 .weather__city {
-   display: flex;
-   flex-direction: column;
-   margin-top: 50%;
+  display: flex;
+  flex-direction: column;
+  /* margin-top: 50%; */
 }
 
 .weather__city--deg {
-   font-size: 2rem;
-   font-weight: bold;
+  font-size: 2rem;
+  font-weight: bold;
 }
 
 .weather__city--city {
-   font-size: 1.2rem;
-   margin-top: 0.4rem;
+  font-size: 1.2rem;
+  margin-top: 0.4rem;
 }
 
 .weather__minMax {
   display: flex;
   justify-content: space-between;
 
-  color: #AAB2C1;
+  color: #aab2c1;
   font-weight: bold;
 }
 
@@ -67,4 +145,20 @@ main {
 .weather__minMax--min {
   display: flex;
   flex-direction: column;
+}
+
+footer {
+  font-size: 1.1rem;
+  position: absolute;
+  bottom: 1rem;
+}
+
+footer a {
+  font-weight: bold;
+  color: #2b2c34;
+  text-decoration: none;
+}
+
+footer a:hover {
+  text-decoration: underline;
 }
