--- a/9- clima-tempo/style.css
+++ b/9- clima-tempo/style.css
@@ -9,9 +9,9 @@ body {
   color: #fffffe;
   font-family: "Roboto", sans-serif;
 
-  background-color: #21d4fd;
-  background-image: linear-gradient(180deg, #21d4fd 0%, #b721ff 100%);
-
+  background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
+  
+  
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -37,21 +37,24 @@ form {
 }
 
 input {
-  font-size: 1.1rem;
+  font-size: 1rem;
   background-color: #d1d1e9;
+  color: #2b2c34;
 
   width: 200px;
   height: 25px;
-  border-radius: 8px;
-
+  
   padding: 6px 12px;
-
+  margin-right: 4px;
+  
+  border-radius: 8px;
   border: none;
   outline: none;
 }
 
 button {
   background-color: #d1d1e9;
+  color: #2b2c34;
   padding: 7px 10px;
 
   border-radius: 8px;
