--- a/9- clima-tempo/style.css
+++ b/9- clima-tempo/style.css
@@ -9,8 +9,7 @@ body {
   color: #fffffe;
   font-family: "Roboto", sans-serif;
 
-  background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
-  
+  background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
   
   display: flex;
   flex-direction: column;
